--- a/assets/CSS/highscore.css
+++ b/assets/CSS/highscore.css
@@ -14,27 +14,24 @@ body {
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: start;
-    max-width: 80rem;
+    max-width: 50rem;
     margin: 0 auto;
 }
 
 #highscore {
-    font-size: 3rem;
+    font-size: 2.5rem;
      color: var(--main-text-color);
-     margin-top: 1rem;
-     margin-bottom: 2rem;
-    margin-left: 0.5rem
+     margin: 1rem 0 2rem 0.5rem;
 }
 
 #highscore-list {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
     margin-left: 0.5rem
 }
 
 .btn {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     padding: 0.6rem;
     margin-top:1.5rem;
     color: var(--main-text-color);
@@ -42,7 +39,6 @@ body {
     background-color: white;
     border-radius: 1rem;
     box-shadow: 1px 2px 2px var(--main-text-color);
-
 }
 
 #back {
